xedoc-rs/tui-overlays/src/bottom_pane/request_user_input/snapshots/xedoc_tui_overlays__bottom_pane__request_user_input__tests__request_user_input_freeform_remapped_interrupt.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1 (1 unanswered)                                                                                           
  Share details.                                                                                                        
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │❯ Type your answer (optional)                                                                                     │  
  │                                                                                                                  │  
  │                                                                                                                  │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  
  enter to submit answer | f12 to interrupt
